Weird fix to scotland registration image - css class wouldn't apply - fixed; fixed modal content and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -460,7 +460,7 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
     background-attachment: fixed;
     filter: contrast(160%);
 }
-.bg-img-scotland-register {
+.bg-img-scotland-1 {
     background: url(/img/jms-dunskey-aerial-min.jpg) 80% center;
 	background-size: cover;
     filter: contrast(160%);
